--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -573,7 +573,7 @@ footer {
   }
 
   .dropdown-toggle {
-    border: zero;
+    border: 0;
   }
 
   .account-toggle {
@@ -605,7 +605,7 @@ footer {
   .minimal-button {
     .dropdown-toggle {
       margin-left: -.75rem;
-      border: zero;
+      border: 0;
       border-radius: 50%;
       background: transparent;
       padding: 10px !important;
