--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -73,7 +73,7 @@
           transition: all .1s ease-in-out;
           opacity: .5;
           margin: 0;
-          border: zero;
+          border: 0;
           border-radius: 50%;
           background: none;
           padding: 0;
@@ -136,7 +136,7 @@
         transition: all .1s ease-in-out;
         opacity: .5;
         margin: 0;
-        border: zero;
+        border: 0;
         border-radius: 50%;
         background: none;
         padding: 0;
