--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -19,7 +19,7 @@
 
     #desc {
       margin: 0;
-      border: zero;
+      border: 0;
       background-color: #fff;
       cursor: hand;
       padding: 0;
@@ -46,7 +46,7 @@
       bottom: 5vw;
       z-index: 999;
       margin: 0;
-      border: zero;
+      border: 0;
       border-radius: 50%;
       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
       padding: 16px;
