--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -74,7 +74,7 @@
                 {{#userHasPermission "COURSE_EDIT"}}
                     <div class="row padding-top">
                         <div class="col-sm-12">
-                            <a href="/{{context}}/{{../courseId}}/topics/{{../_id}}/edit" class="btn btn-add btn-primary">Bearbeiten</a>
+                            <a href="/courses/{{../courseId}}/topics/{{../_id}}/edit" class="btn btn-add btn-primary">Bearbeiten</a>
                             <a href="#"
                             data-href="{{../_id}}"
                             data-courseId="{{../courseId}}"
