--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -108,19 +108,21 @@ aside.nav-sidebar {
         .cloud-logo {
             display: inline-block;
             vertical-align: top;
-            width: 45px;
-            height: 30px;
-            margin-bottom: -5px;
-            margin-right: 0.25rem;
+            width: 35px;
+            height: 28px;
+            margin-right: 9px;
+            margin-left: -3px;
             background: $logoBackground;
             background-size: contain;
             @include media-breakpoint-down(md) {
                 width: 100%;
                 margin-right: 0;
+                margin-left: 0px;
             }
             @include media-breakpoint-down(xs) {
                 width: 45px;
                 margin-right: 0;
+                margin-left: 0px;
             }
         }
         .sc-title{
