align header style of topics and tasks in course detail page

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -126,7 +126,11 @@
     display: none;
   }
 }
-
+.course-task-header {
+  padding: 0.5rem 0.75rem;
+  background-color: $primaryColor;
+  color: $colorWhite;
+}
 .card-topic {
   cursor: pointer;
 
