--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-sm-12 container">
-    <h4>
+    <div class="course-task-header">
       <i class="fa fa-eye"></i>
       Gestellte Aufgaben
       <small>({{arrayLength homeworks}} Aufgabe{{#ifneq 1 (arrayLength homeworks)}}n{{/ifneq}})</small>
-    </h4>
+    </div>
     <div id="homeworks" class="container-fluid">
       <ol class="homework">
         <div class="row">
@@ -32,12 +32,12 @@
         </a>
       {{/userHasPermission}}
       <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
-        <h4>
+        <div class="course-task-header">
           <small title="Private Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
           <i class="fa fa-eye-slash"></i>
           Private Aufgaben
           <small>({{arrayLength myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength myhomeworks)}}n{{/ifneq}})</small>
-        </h4>
+        </div>
       </a>
       <div id="myhomeworks" class="container-fluid collapse">
         <ol class="homework">
