Adapt header color cause its no CTA

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -128,7 +128,7 @@
 }
 .course-task-header {
   padding: 0.5rem 0.75rem;
-  background-color: $primaryColor;
+  background-color: $colorDarkerGrey;
   color: $colorWhite;
 }
 .card-topic {
