modal for file permission settings

--- a/views/files/forms/form-share-file.hbs
+++ b/views/files/forms/form-share-file.hbs
@@ -16,7 +16,7 @@
         </ul>
     </div> --}}
 
-    <h5 class="mt-2">Freigeben für:</h5>
+    <h5>Freigeben für:</h5>
     <div>
         <table class="file-permissions">
             <tr>
