final adaptions, show private todos/tasks only to edit-permission-user

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -128,8 +128,7 @@
 }
 .course-task-header {
   padding: 0.5rem 0.75rem;
-  background-color: $colorDarkerGrey;
-  color: $colorWhite;
+  color: $fontColor;
 }
 .card-topic {
   cursor: pointer;
