--- a/theme/default/style.scss
+++ b/theme/default/style.scss
@@ -8,6 +8,7 @@ $logoGradient: linear-gradient(35deg, #b1063a 35%, #f6a800);
 $colorBeige: #e6e2e2;
 $colorGrey: rgba(232, 232, 232, 0.5);
 $colorLightGrey: rgba(0,0,0,0.1);
+$colorDarkerGrey: #555555;
 $colorWhite: #fff;
 
 $logoBackground: url("../../images/logo/cloud-transparent-mono.svg") no-repeat center;
