--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -1,12 +1,16 @@
 <div class="row">
   <div class="col-sm-12 container">
-    {{#userHasPermission "COURSE_EDIT" }}
+    {{#ifneq 0 (arrayLength homeworks)}}
       <div class="course-task-header">
         <i class="fa fa-eye"></i>
         Gestellte Aufgaben
         <small>({{arrayLength ../homeworks}} Aufgabe{{#ifneq 1 (arrayLength ../homeworks)}}n{{/ifneq}})</small>
       </div>
-    {{/userHasPermission}}
+    {{else}}
+      <p class="text-muted list-group-item list-group-item-action flex-column align-items-start">
+        <span>Noch keine gestellten Aufgaben</span>
+      </p>
+    {{/ifneq}}
     <div id="homeworks" class="container-fluid">
       <ol class="homework">
         <div class="row">
@@ -25,15 +29,15 @@
     {{/userHasPermission}}
   </div>
 </div>
-{{#userHasPermission "COURSE_EDIT" }}
-  <div class="section-my-tasks">
-    <div class="row">
-      <div class="col-sm-12">
-        {{#userHasPermission "HOMEWORK_CREATE" }}
-          <a href="/homework/new?course={{../_id}}&private=true" class="btn btn-secondary btn-sm pull-right ml-1" title="private Aufgabe hinzufügen">
-            <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span>
-          </a>
-        {{/userHasPermission}}
+<div class="section-my-tasks">
+  <div class="row">
+    <div class="col-sm-12">
+      {{#userHasPermission "HOMEWORK_CREATE" }}
+        <a href="/homework/new?course={{../_id}}&private=true" class="btn btn-secondary btn-sm pull-right ml-1" title="private Aufgabe hinzufügen">
+          <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span>
+        </a>
+      {{/userHasPermission}}
+      {{#ifneq 0 (arrayLength myhomeworks)}}
         <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
           <div class="course-task-header">
             <small title="Private Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
@@ -51,7 +55,7 @@
             </div>
           </ol>
         </div>
-      </div>
+      {{/ifneq}}
     </div>
   </div>
-{{/userHasPermission}}
+</div>
