align header style of topics and tasks in course detail page (#875)
* align header style of topics and tasks in course detail page

* Adapt header color cause its no CTA

* final adaptions, show private todos/tasks only to edit-permission-user

* adapted interface behaviour to array sizes, added plain empty state

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -126,7 +126,10 @@
     display: none;
   }
 }
-
+.course-task-header {
+  padding: 0.5rem 0.75rem;
+  color: $fontColor;
+}
 .card-topic {
   cursor: pointer;
 
