--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -1,10 +1,16 @@
 <div class="row">
   <div class="col-sm-12 container">
-    <h4>
-      <i class="fa fa-eye"></i>
-      Gestellte Aufgaben
-      <small>({{arrayLength homeworks}} Aufgabe{{#ifneq 1 (arrayLength homeworks)}}n{{/ifneq}})</small>
-    </h4>
+    {{#ifneq 0 (arrayLength homeworks)}}
+      <div class="course-task-header">
+        <i class="fa fa-eye"></i>
+        Gestellte Aufgaben
+        <small>({{arrayLength ../homeworks}} Aufgabe{{#ifneq 1 (arrayLength ../homeworks)}}n{{/ifneq}})</small>
+      </div>
+    {{else}}
+      <p class="text-muted list-group-item list-group-item-action flex-column align-items-start">
+        <span>Noch keine gestellten Aufgaben</span>
+      </p>
+    {{/ifneq}}
     <div id="homeworks" class="container-fluid">
       <ol class="homework">
         <div class="row">
@@ -31,23 +37,25 @@
           <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span>
         </a>
       {{/userHasPermission}}
-      <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
-        <h4>
-          <small title="Private Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
-          <i class="fa fa-eye-slash"></i>
-          Private Aufgaben
-          <small>({{arrayLength myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength myhomeworks)}}n{{/ifneq}})</small>
-        </h4>
-      </a>
-      <div id="myhomeworks" class="container-fluid collapse">
-        <ol class="homework">
-          <div class="row">
-            {{#each myhomeworks}}
-              {{> 'homework/components/course_overview_card_template'}}
-            {{/each}}
+      {{#ifneq 0 (arrayLength myhomeworks)}}
+        <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
+          <div class="course-task-header">
+            <small title="Private Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
+            <i class="fa fa-eye-slash"></i>
+            Private Aufgaben
+            <small>({{arrayLength ../myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength ../myhomeworks)}}n{{/ifneq}})</small>
           </div>
-        </ol>
-      </div>
+        </a>
+        <div id="myhomeworks" class="container-fluid collapse">
+          <ol class="homework">
+            <div class="row">
+              {{#each ../myhomeworks}}
+                {{> 'homework/components/course_overview_card_template'}}
+              {{/each}}
+            </div>
+          </ol>
+        </div>
+      {{/ifneq}}
     </div>
   </div>
 </div>
