adding third point

--- a/views/teams/forms/form-file-permissions.hbs
+++ b/views/teams/forms/form-file-permissions.hbs
@@ -28,6 +28,12 @@
                 <input class="box" type="checkbox" name="externalExperts" value="allowMembers" checked="checked" />
             </td>
         </tr>
+        <tr>
+            <td>Leiter und Team-Admins</td>
+            <td>
+                <input class="box" type="checkbox" data-force-value name="externalExperts" value="allowExternals" checked="checked" disabled />
+            </td>
+        </tr>
     </table>
     <br>
     <i>Du kannst die Zugriffsberechtigungen für einzelne Dateien und Ordner jederzeit bearbeiten.</i>
