--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -36,7 +36,7 @@
 
                     <div class="form-group">
                         <label>E-Mail-Adresse: *</label>
-                        <input class="form-control linked" type="email" name="email" placeholder="user@schul-cloud.org" value="{{user.email}}" disabled required>
+                        <input class="form-control linked" type="email" name="email" placeholder="user@schul-cloud.org" value="{{user.email}}" required>
                     </div>
                 {{#unless editTeacher}}
                     <div class="form-group">
