--- a/views/help/mail-card.hbs
+++ b/views/help/mail-card.hbs
@@ -1,5 +1,5 @@
-<p>Manche Anliegen brauchen mehr Möglichkeiten, als die Felder der Kontaktfunktion zulassen. Schreib uns eine E-Mail, wenn du mit uns ins Gespräch kommen willst:</p>
+<p>Manche Anliegen brauchen mehr Möglichkeiten, als die Felder der Kontaktfunktion zulassen. Schreibe uns eine E-Mail, wenn du mit uns ins Gespräch kommen willst:</p>
 <div id="email-addresses">
     <a href="mailto:feedback@schul-cloud.org">feedback@schul-cloud.org</a> ans HPI für Ideen, Kritik und Wünsche rund um die Cloud selbst. <br>
-    <a href="mailto:schul-cloud@mint-ec.de">schul-cloud@mint-ec.de</a> an den MINT-EC für Anregungen rund um das Thema Onboarding und Begleitung.
+    <a href="mailto:schul-cloud@mint-ec.de">schul-cloud@mint-ec.de</a> an MINT-EC bei Fragen und Anregungen zur Einführung und Nutzung der HPI Schul-Cloud an deiner Schule.
 </div>
