--- a/static/styles/help/component-card.scss
+++ b/static/styles/help/component-card.scss
@@ -1,8 +1,8 @@
 .help-card{
     position: relative;
-    margin-top: 3rem;
-    margin-bottom: 1rem;
-    max-width: 500px;
+    margin: 3rem 10% 1rem 10%;
+    min-width: 290px;
+    //max-width: 500px;
 
     .icon-wrapper{
         display: inline-block;
