some iFrame changes

--- a/views/help/confluence.hbs
+++ b/views/help/confluence.hbs
@@ -6,6 +6,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
+        <script>document.domain = "schul-cloud.org";</script>
         <script src="/scripts/help.js" type="text/javascript" defer></script>
     {{/content}}
 
