inviting now possible

--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -67,7 +67,7 @@
         <div class="form-group mt-3" data-method="email">
             <h3>Lehrer per E-Mail einladen</h3>
             <div class="form-group">
-                <label for="email">Gebe die E-Mail des Experten ein, an welche die Einladung verschickt wird.</label>
+                <label for="email">Gebe die E-Mail des Lehrers ein, an welche die Einladung verschickt wird.</label>
                 <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
             </div>      
         </div>        
